# pipe-recon

./: .gitignore  README.md  pyproject.toml
examples/: demo.py
reconpilot/: __init__.py  cli.py  connection.py  mapping.py  reconciler.py  report.py
tests/: test_domain_scenarios.py  test_pipe_recon.py  test_row_scenarios.py  test_transform_scenarios.py
tests/fixtures/: setup_test_dbs.py  source_db.sqlite  supplier_mapping.csv  target_db.sqlite
